style: fix carousel card clipping issue by removing content-wrap padding and using CSS math for dynamic button positioning

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -105,14 +105,6 @@ body {
   padding-right: var(--px);
 }
 
-@media (min-width: 1024px) {
-  .products-section .content-wrap {
-    padding-left: max(var(--px), 60px);
-    padding-right: max(var(--px), 60px);
-  }
-}
-
-
 .products-carousel-controls-side {
   position: absolute;
   top: 50%;
@@ -129,10 +121,11 @@ body {
 /* Ensure completely negative-space arrows on desktop */
 @media (min-width: 1024px) {
   .products-carousel-controls-side {
-    left: -54px;
-    right: -54px;
+    left: max(-64px, calc(-1 * var(--px) - max(0px, calc((100vw - 1440px) / 2)) + 4px));
+    right: max(-64px, calc(-1 * var(--px) - max(0px, calc((100vw - 1440px) / 2)) + 4px));
   }
 }
+
 
 
 .products-carousel-button {
